# peertube-se

./: .gitignore  Cargo.toml  README.md  Rocket.toml  es_mappings.json  rust-toolchain
src/: db.rs  elastic.rs  instance.rs  instance_storage.rs  lib.rs  peertube_api.rs  video.rs  video_storage.rs
static/: index.css  index.html
templates/: error.html.hbs  footer.html.hbs  layout.html.hbs  video.html.hbs
tests/: video1.json
web/: error.hbs  layout.html.hbs  query_result.html.hbs  video.html.hbs
