[package]
name = "peertube_crawler"
version = "0.1.0"
authors = ["Paul Florence <perso@florencepaul.com>"]
edition = "2018"

[[bin]]
name="crawler"

[[bin]]
name="server"

[lib]
name="peertube_lib"

[dependencies]
reqwest="0.9.18"
serde_json = "1.0.39"
futures = "0.1.27"
tokio = "0.1.20"
serde = "1.0.91"
petgraph="0.4.13"
petgraph-graphml = "1.0.0"
elastic = "~0.21.0-pre.5"
elastic_derive = "~0.21.0-pre.5"
rocket = "0.4.2"
rusqlite = "0.20.0"
log = "0.4.8"
env_logger = "0.6.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]